--- a/testfiles/index.html
+++ b/testfiles/index.html
@@ -5,7 +5,6 @@
     <title>Mood Ring</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 
-
     <script src="angular.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
@@ -18,6 +17,7 @@
 
   <body>
 
+<!-- the mood form -->
 <form ng-controller="MoodController as mood">
 
   <div id="emotions">
@@ -25,13 +25,12 @@
     <br/>
     <br/>
 
-    <input id="one"
-           type="radio"
-           value="1"
-           name="mood"
-           ng-model = "mood.happiness"/>
-    <label class="mood one"
-           for="1"></label>
+    <button id="one"
+            class="mood one"
+            type="button"
+            value="1"
+            name="mood"
+            ng-model = "mood.happiness"/>
 
 
     <input id="two"
@@ -113,11 +112,13 @@
 
 </div>
 
-
-<div ng-controller="FactorController as factor" ng-show="mood.happiness != null">
+<!-- the factor form -->
+<form ng-controller="FactorController as factor">
+<div ng-show="mood.happiness != null">
   Why do you feel that way?<br/>
   <input type="text" ng-model="factor.blurb">
 </div>
+<input type="submit" value="DUMMY SUBMIT BUTTON">
 </form>
 
 
