made a lot of changes to HTML files in public folders

--- a/public/angular_templates/show.html
+++ b/public/angular_templates/show.html
@@ -1,1 +1,4 @@
-<h1>This is the show single post page</h1>
+<a href="/moods">Show All Moods</a>
+<a href="/moods/:id">Show single mood</a>
+<a href="/users/:id">Show single user</a>
+<a href="/chart">D3 resides here</a>
