fixed styling errors

--- a/public/angular_templates/moods.html
+++ b/public/angular_templates/moods.html
@@ -15,7 +15,7 @@
 
      <!-- two -->
      <span ng-show="m.happiness==2"
-           class="emojisw">
+           class="emojishow">
        <img src="assets/2.png"/>
      </span>
 
