--- a/public/angular_templates/moods.html
+++ b/public/angular_templates/moods.html
@@ -73,3 +73,9 @@
         <h4>"{{factor.blurb}}"</h4>
       </span>
 </div>
+
+  <div ng-controller='WeatherCtrl'>
+    <div ng-view>
+      this is showing up
+    </div>
+  </div>
