testing various image tags to see if they show on heroku

--- a/public/angular_templates/form.html
+++ b/public/angular_templates/form.html
@@ -19,7 +19,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood one"
            for="one">
-        <img src="assets/1.png"/>
+       <%= image_tag("1.png") %>
+<!--         <img src="assets/1.png"/> -->
     </label>
 
 
@@ -32,7 +33,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood two"
            for="two">
-      <img src="assets/2.png"/>
+<!--       <img src="assets/2.png"/> -->
+       <%= image_tag("2.png") %>
     </label>
 
 
@@ -45,7 +47,8 @@
            ng-model = "mood.happiness"/>
     <label class="mood three"
            for="three">
-      <img src="assets/3.png"/>
+     <%= image_tag("2.png") %>
+<!--       <img src="assets/3.png"/>-->    
     </label>
 
 <!-- four -->
@@ -57,8 +60,9 @@
            ng-model = "mood.happiness"/>
     <label class="mood four"
            for="four">
-      <img src="assets/4.png"/>
-    </label>
+            <%= image_tag("4.png") %>
+<!--       <img src="assets/4.png"/>
+ -->    </label>
 
 
 <!-- five -->
@@ -70,8 +74,9 @@
            ng-model = "mood.happiness"/>
     <label class="mood five"
            for="five">
-      <img src="assets/5.png"/>
-    </label>
+       <%= image_tag("5.png") %>     
+<!--       <img src="assets/5.png"/>
+ -->    </label>
 
 
 <!-- six -->
