--- a/public/angular_templates/moods.html
+++ b/public/angular_templates/moods.html
@@ -56,37 +56,37 @@
       <!-- six -->
       <span ng-show="m.happiness==6"
             class="emojishow">
-            <%= image_tag("6.png") %>
- <!--        <img src="assets/6.png"/>
-  -->     </span>
+ <!--       <%= image_tag("6.png") %> -->
+        <img src="assets/6.png"/>
+      </span>
 
       <!-- seven -->
       <span ng-show="m.happiness==7"
             class="emojishow">
-            <%= image_tag("7.png") %>
-<!--         <img src="assets/7.png"/>
- -->      </span>
+<!--         <%= image_tag("7.png") %> -->
+        <img src="assets/7.png"/>
+      </span>
 
       <!-- eight -->
       <span ng-show="m.happiness==8"
             class="emojishow">
-            <%= image_tag("8.png") %>
-<!--         <img src="assets/8.png"/>
- -->      </span>
+<!--         <%= image_tag("8.png") %> -->
+         <img src="assets/8.png"/>
+      </span>
 
       <!-- nine -->
       <span ng-show="m.happiness==9"
             class="emojishow">
-            <%= image_tag("9.png") %>
-<!--         <img src="assets/9.png"/>
- -->      </span>
+<!--         <%= image_tag("9.png") %> -->
+        <img src="assets/9.png"/>
+      </span>
 
       <!-- ten -->
       <span ng-show="m.happiness==10"
             class="emojishow">
-            <%= image_tag("10.png") %>
-<!--         <img src="assets/10.png"/>
- -->      </span>
+<!--         <%= image_tag("10.png") %> -->
+         <img src="assets/10.png"/>
+      </span>
 
 
       <!-- FACTORS -->
